# simtools-tests

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: CI-linter.yml  CI-schema-validation.yml  CI-test-resources.yml
docs/changes/: 10.maintenance.md  2.feature.md  3.maintenance.md  4.feature.md  6.maintenance.md  9.feature.md
simtools-tests/legacy/: README.md
simtools-tests/legacy/v0.32.0/integration_tests/: ff-1m_flasher.simtel.zst  gamma_diffuse_run000010_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst  gamma_run000007_za40deg_azm180deg_South_subsystem_lsts_6.0.2_test.corsika.zst  proton_za20deg_azm000deg_North_alpha_6.0.0_reduced_event_data.hdf5
simtools-tests/v0.32.0/integration_tests/: gamma_run2_za20deg_azm0deg-North-Prod5_test-production-5.hdata.zst  proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst  proton_run000202_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
simtools-tests/v0.32.0/integration_tests/config_files/: nsb_reference_spectrum.config.yml  num_gains.config.yml  simulate_flasher_simulation_lst_north.config.yml  simulate_prod_gamma_20deg_north_alpha.config.yml  simulate_prod_gamma_40_deg_south.config.yml  validate_camera_efficiency_mstx_flashcam_south.config.yml
simtools-tests/v0.32.0/integration_tests/resources_generation/: array_element_position_ground.config.yml  array_element_position_utm.config.yml  array_layouts.config.yml  camera_filter_incidence_angle.config.yml  (+18 more)
simtools-tests/v0.33.0/integration_tests/: run_time.yml
simtools-tests/v0.34.0/integration_tests/: run_time.yml
simtools-tests/v0.35.0/integration_tests/: run_time.yml
(+47 files in other folders)
